--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ table {
 .banner>img {
 	height: 220px;
 	width:900px;
+	z-index: -1;
 }
 
 .wrappper {
@@ -69,7 +70,8 @@ table {
 
 #alphabet {
     margin: 15px auto;
-    padding: 10px;
+	padding: 10px;
+	padding-left: 30px;
 	max-width: 450px;
 }
 
@@ -149,13 +151,13 @@ button:hover {
 #categoryName{
 	font-size: 28px;
 	color: #fff;
-	margin: 20px;
+	margin-top: -35px;
 }
 
 #message{
 	font-size: 28px;
 	color: #fff;
-	margin: 20px;
+	margin: 5px;
 }
 
 #myLives{
@@ -177,6 +179,10 @@ button:hover {
 #finalMessage{
 	color: #751515;
 	font-size: 40px;
+}
+
+#holder{
+	padding: 30px;
 }
 
 @media screen and (max-width: 768px) {
